Fixed bin/fetchware not being indexed by adding missing shebang line.
Maybe that will do the trick. I though it was dzil that adds this, but dzil does
not touch it. Instead, Module::Build or ExtUtils::MakeMaker does this for you.
That means that I need it to have a shebang line in the script, and the build
scripts will just update it to $^X during install.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revison History for App::Fetchware
 
 {{$NEXT}}
+    * Attempt to fix bin/fetchware not properly being indexed again :)
+      bin/fetchware was missing a shebang line. This has been fixed. Perhaps
+      this is the snag preventing bin/fetchware from being indexed properly.
 
 1.003     2013-11-23 01:42:54 America/New_York
     * Fix in 1.002 failed to fix bin/fetchware indexing. Going to try giving
